abstract and conclusions update

--- a/tool-art.tex
+++ b/tool-art.tex
@@ -60,7 +60,7 @@
 \maketitle
 
 \begin{abstract}
-	Object Cluster Hierarchy is a new variant of hierarchical clustering that increasingly attracts more interest in the field of Machine Learning. Being a novelty, the lack of tools for systematic analysis and comparison of such structures inhibits its further development. In this paper, we propose a novel method for generating hierarchical structures of data based on Tree-Structured Stick Breaking Process (TSSBP) that can be used for benchmarking. The article includes theoretical analysis of the generation parameters, their influence on the generated hierarchies, and the flexibility of the model to create a wide range of differently-structured data. More importantly, the intuition how to operate with parameters and a set of benchmarking datasets is provided. The developed tools together with proposed benchmarks are publicly available (\texttt{http://kio.pwr.edu.pl/?page\_id=396}).
+	Generation of Object Cluster Hierarchies is a new variant of Hierarchical Clustering that increasingly gains more interest in the field of Machine Learning. Being a novelty, the lack of tools for systematic analysis and comparison of Object Cluster Hierarchies inhibits its further development. In this paper, we propose a novel (cos innego tu znalezc, ale nie 'new') method for generating hierarchical structures of data based on Tree-Structured Stick Breaking Process that can be used for benchmarking. The article presents thorough empirical and theoretical analysis of the model revealing its characteristics. More importantly, the intuition how to operate with model's parameters and a set of benchmarking datasets is provided. Conducted experiments show usefulness of the model as high flexibility in generating a wide range of differently-structured data is achieved. The developed tools together with proposed benchmarks are publicly available (\texttt{http://kio.pwr.edu.pl/?page\_id=396}).
 \end{abstract}
 
 \textbf{keywords:} Artificial Data, Benchmark Data, Benchmark Data Generator, Object Cluster Hierarchy, Tree-Structured Stick Breaking Process, Clustering Evaluation, Cluster Analysis.
@@ -73,14 +73,14 @@ Recently, researchers became interested in a new variant of hierarchical cluster
 
 The enormity of digital data drives a rapid development of analysis methods, creating the opportunity to get the data insights from different perspectives. One of the key data analysis topics are \textit{regression}, \textit{classification}, and \textit{clustering}~\cite{Kakkar2014,Dash2003109,Xu:2005:SCA:2325810.2327433}.
 
-Clustering methods, in general, are still not satisfactory for a variety of data and specific goals~\cite{blundell2010discovering}. From the perspective of this research, the primary issue is a semantic gap that exists between how humans perceive hierarchies and hierarchical clustering methods. Hierarchical data (e.g.,~\cite{ILSVRC15}) is generally understood to possess the following properties:
+Clustering methods, in general, are still not satisfactory for a variety of data and specific goals~\cite{blundell2010discovering}. From the perspective of this research, the primary issue is a semantic gap that exists between how humans perceive hierarchies and hierarchical clustering methods. Human perception describes hierarchical data (e.g.,~\cite{ILSVRC15}) as possessing the following properties:
 \begin{enumerate}
     \item the data can be present to any node in the hierarchy, not only leaves; and
     \item the data specificity should always be higher (at most equal) in a child node than in the corresponding parent node; and
     \item the data in a node should be more similar to data in parent and child clusters than to unrelated clusters located in different subtrees in the hierarchy.
 \end{enumerate}
 
-Even though the first point is rarely addressed in hierarchical clustering approaches it can be seen in methods such as Tree-Structured Stick Breaking for Hierarchical Data (TSSB-HC)\cite{ghahramani2010tree}, Bayesian Rose Trees\cite{2010_bayesian_rose_trees}, Inheritance Retention Variance Hierarchical Clustering (IRV-HC)\cite{Spytkowski2012}, or modified hierarchic Gaussian Mixture Model (Hk++)\cite{Olech2016}. These methods address the human perception of hierarchy. The novelty of this research and the differences between these methods and classical clustering methods poses a question:
+Even though the first point is rarely addressed in hierarchical clustering approaches it can be seen in methods such as Tree-Structured Stick Breaking for Hierarchical Data (TSSB-HC)\cite{ghahramani2010tree}, Bayesian Rose Trees\cite{2010_bayesian_rose_trees}, Inheritance Retention Variance Hierarchical Clustering (IRV-HC)\cite{Spytkowski2012}, or modified hierarchic Gaussian Mixture Model (Hk++)\cite{Olech2016}. These methods address the human perception of hierarchy outlined above. The novelty of this research and the differences between these methods and classical clustering methods poses a question:
 
 \textit{Are existing clustering benchmarks capable of evaluating these unorthodox clustering methods?}
 
@@ -440,7 +440,7 @@ In this paper, we present and evaluate the details of the generator's model. We 
     
     As an additional observation to the above, the $\gamma$ value does not change by level. Because of this, a critical factor in considering how many children a node will have is the number of data passing through the node. Bigger nodes that are located higher up are more likely to have more children than smaller nodes lower down the hierarchy. Additionally, the more children a node has, the more of them will be small nodes, i.e., nodes through which few objects pass, resulting primarily in leaf nodes or nodes with single children. This behaviour of smaller nodes also transfers lower down the hierarchy where less data reaches leading to similar behaviour.
     
-    Finally, the reassigned test cases show a tendency for data to move down hierarchy levels. Intuitively the groups located lower down in the hierarchy are more specific and potentially conflicting data would be prone to moving down into the more specific child clusters. However, despite this tendency, the hierarchies retain most of their previous characteristics, simply with the mass of data being shifted down towards the lower levels of the hierarchy. Due to the post-processing applied to these datasets, they can be better suited for initial testing of grouping methods. In most cases, testing using both types of datasets (unfiltered and filtered) may be the preferred and most valuable approach in every case where the features of the objects are considered. 
+    Finally, the reassigned test cases show a tendency for data to move down hierarchy levels. Intuitively the groups located lower down in the hierarchy are more specific and potentially conflicting data would be prone to moving down into the more specific child clusters. However, despite this tendency, the hierarchies retain most of their previous characteristics, simply with the mass of data being shifted down towards the lower levels of the hierarchy. Due to the post-processing applied to these datasets, they can be better su	ited for initial testing of grouping methods. In most cases, testing using both types of datasets (unfiltered and filtered) may be the preferred and most valuable approach in every case where the features of the objects are considered. 
     
 	\section{Benchmarking Dataset}
     \label{sec:benchmarking_dataset}
@@ -448,15 +448,17 @@ In this paper, we present and evaluate the details of the generator's model. We 
 	%
 	\section{Conclusions}
 	\label{conclusion}
-	The experiments presented in the previous sections serve to highlight both the strengths and weaknesses of our proposed generator. A prominent strength is a high range of different tree structures that can be generated and the ability to control these structures using the introduced parameters. Thanks to that, a wide range of different hierarchy types, often seen in the real-world problems, has been generated and made publicly available. Published benchmars and the ability to create more hierarchies using the generator is lying a solid foundation for further development of the concept of Object Cluster Hierarchies.
+	The experiments presented in the previous sections serve to highlight both strengths and weaknesses of the proposed generator. A prominent strength is a high range of different tree structures that can be generated and the ability to fine-control these structures using the introduced parameters. Thanks to that, a wide range of different hierarchy types, often seen in the real-world problems, has been generated and made publicly available\footnote{\url{https://cs.nyu.edu/~roweis/data.html}}. 
 	
-	From a practical point of view, it is also essential that the parameters can be separated into groups, each controlling a different aspect of the hierarchy. Vertical distribution of data is controlled by $\alpha_0$ and $\lambda$, hierarchy width depends on the value of $\gamma$, and $p$, $q$ controls the data specificity. This fact allows for a further fine-tuning of desired test data. Every parameter set has an interpretation and its effect on the generated hierarchy is straightforward, as shown in this article. The generation process scales with the number of points to generate, expanding the hierarchy as more elements are generated.
+	Published benchmarks and the ability to create more hierarchies using the generator is lying a solid foundation for further development of the concept of Object Cluster Hierarchies. Generated hierarchies can assist not only in clustering methods development and comparison but also in a research of OCH quality measures. The latter is important since the differences between OCH and Hierarchical Clustering results are not fully recognised by existing internal and external measures. 
+	
+	From a practical point of view, it is also essential that the generator's parameters can be separated into groups, each controlling a different aspect of the hierarchy. Vertical distribution of data is controlled by $\alpha_0$ and $\lambda$, hierarchy width depends on the value of $\gamma$, and $p$, $q$ controls the data specificity. As shown in this article, every parameter set has an interpretation and its effect on the generated hierarchy is straightforward. This allows for a further fine-tuning towards desired test data. The generation process scales with the number of points to generate, expanding the hierarchy as more elements are generated.
     
-    One of the findings is the fact that the generated hierarchy will always display a degree of self-similarity, replicating the same general form both vertically and horizontally. We called it as generation of the trailing divisions. Because of that a few specific areas of the generated hierarchies are not fully controlled. A remedy for this issue is to use a post-processing procedure similar to the described reassignment process. This should result in cleaner hierarchies being generated and giving the user finer control over the overall structure.
+    One of the findings is the fact that the generated hierarchy will always display a degree of self-similarity, replicating the same general form both vertically and horizontally. We called it as generation of trailing divisions. Because of that a few specific areas of the generated hierarchies are not fully controlled. A remedy for this issue is to use a post-processing procedure similar to the described reassignment process. This should result in cleaner hierarchies and give the user finer control over their overall structure.
     
     In its current form, the generator is limited to a generation of normally-distributed, multidimensional, and uncorrelated real value data. It can be extended to use different kernels leading to different structures of generated hierarchies or generators operating on different types of data.
     
-    Furthermore, the self-similar (fractal) nature of the hierarchies suggests a potential for the generator to be described using the language of fractals and especially L-Systems~\cite{prusinkiewicz2013lindenmayer}. Describing the generation process in this way may offer a different (more granular) view over the details of the hierarchical structure. 
+    Furthermore, the self-similar (fractal) nature of the hierarchies suggests a potential for the generator to be described using the language of fractals and especially L-Systems~\cite{prusinkiewicz2013lindenmayer}. Describing the generation process in that form may provide a different (more granular) view over the details of the hierarchical structure. 
 	%
 	\bibliography{mybibfile}
 	%
