--- a/tool-art.tex
+++ b/tool-art.tex
@@ -47,7 +47,7 @@
 
 \title{Generating Object Cluster Hierarchies for Benchmarking}
 %
-\author{Micha\l{} Spytkowski \and \L{}ukasz P. Olech \and Halina Kwasnicka \\ Department of Computational Intelligence\\ Wroclaw University of Science and Technology, \\ Wybrzeze Wyspianskiego 27, 50-370 Wroclaw, Poland\\ e-mail: \url{michal.spytkowski@pwr.edu.pl}, \\ \url{lukasz.olech@pwr.edu.pl}, \\ \url{halina.kwasnicka@pwr.edu.pl}}
+\author{\L{}ukasz P. Olech \and Micha\l{} Spytkowski \and Halina Kwasnicka \\ Department of Computational Intelligence\\ Wroclaw University of Science and Technology, \\ Wybrzeze Wyspianskiego 27, 50-370 Wroclaw, Poland\\ e-mail: \url{michal.spytkowski@pwr.edu.pl}, \\ \url{lukasz.olech@pwr.edu.pl}, \\ \url{halina.kwasnicka@pwr.edu.pl}}
 
 \bibliographystyle{abbrv}
 
@@ -60,85 +60,77 @@
 \maketitle
 
 \begin{abstract}
-	Generation of Object Cluster Hierarchies is a new variant of Hierarchical Clustering that increasingly gains more interest in the field of Machine Learning. Being a novelty, the lack of tools for systematic analysis and comparison of Object Cluster Hierarchies inhibits its further development. In this paper, we propose a novel (cos innego tu znalezc, ale nie 'new') method for generating hierarchical structures of data based on Tree-Structured Stick Breaking Process that can be used for benchmarking. The article presents thorough empirical and theoretical analysis of the model revealing its characteristics. More importantly, the intuition how to operate with model's parameters and a set of benchmarking datasets is provided. Conducted experiments show usefulness of the model as high flexibility in generating a wide range of differently-structured data is achieved. The developed tools together with proposed benchmarks are publicly available (\texttt{http://kio.pwr.edu.pl/?page\_id=396}).
+	Generation of Object Cluster Hierarchies is a new variant of Hierarchical Clustering that increasingly gains more interest in the field of Machine Learning. Being a novelty, the lack of tools for systematic analysis and comparison of Object Cluster Hierarchies inhibits its further development. In this paper, we propose a novel method for generating hierarchical structures of data based on Tree-Structured Stick Breaking Process that can be used for benchmarking. The article presents thorough empirical and theoretical analysis of the method revealing its characteristics. More importantly, the intuition how to operate with model parameters and a set of benchmarking datasets are provided. Conducted experiments show usefulness of the model as high flexibility in generating a wide range of differently-structured data is achieved. The developed generator together with proposed benchmarks are publicly available (\texttt{http://kio.pwr.edu.pl/?page\_id=396}).
 \end{abstract}
 
 \textbf{keywords:} Artificial Data, Benchmark Data, Benchmark Data Generator, Object Cluster Hierarchy, Tree-Structured Stick Breaking Process, Clustering Evaluation, Cluster Analysis.
 
 \section{Introduction}
+\label{sec:intro}
+The enormity of digital data drives a rapid development of analysis methods, creating the opportunity to get the data insights from different perspectives. One of the key data analysis topics are \textit{regression}, \textit{classification}, and \textit{clustering}~\textbf{Kakkar2014,Dash2003109<-cos nowszego,Xu:2005:SCA:2325810.2327433<-cos nowszego}.
 
-\textbf{wsadzic to gdzies tutaj}
-Recently, researchers became interested in a new variant of hierarchical clustering, where hierarchical (partial order) relationships exist not only between clusters, as it happens in a dendrogram, but also between clustered objects. In this variant objects can be assigned not only to leaves but to any node of the hierarchy. Although examples of this approach already exist in literature, the authors have encountered a problem with the systematic analysis and comparison of such clustering results as there is a lack of available benchmark data. This work aims to fill this gap. 
-
-
-The enormity of digital data drives a rapid development of analysis methods, creating the opportunity to get the data insights from different perspectives. One of the key data analysis topics are \textit{regression}, \textit{classification}, and \textit{clustering}~\cite{Kakkar2014,Dash2003109,Xu:2005:SCA:2325810.2327433}.
-
-Clustering methods, in general, are still not satisfactory for a variety of data and specific goals~\cite{blundell2010discovering}. From the perspective of this research, the primary issue is a semantic gap that exists between how humans perceive hierarchies and hierarchical clustering methods. Human perception describes hierarchical data (e.g.,~\cite{ILSVRC15}) as possessing the following properties:
+Clustering methods, in general, are still not satisfactory for a variety of data and specific goals~\cite{blundell2010discovering}. From the perspective of this research, the primary issue is a semantic gap that exists between how humans perceive hierarchies and Hierarchical Clustering methods. Human perception describes hierarchical data (e.g.,~\cite{ILSVRC15}) as possessing the following properties:
 \begin{enumerate}
     \item the data can be present to any node in the hierarchy, not only leaves; and
     \item the data specificity should always be higher (at most equal) in a child node than in the corresponding parent node; and
-    \item the data in a node should be more similar to data in parent and child clusters than to unrelated clusters located in different subtrees in the hierarchy.
+    \item the data in a node should be more similar to data in parent and child nodes than to unrelated nodes located in different subtrees in the hierarchy.
 \end{enumerate}
 
-Even though the first point is rarely addressed in hierarchical clustering approaches it can be seen in methods such as Tree-Structured Stick Breaking for Hierarchical Data (TSSB-HC)\cite{ghahramani2010tree}, Bayesian Rose Trees\cite{2010_bayesian_rose_trees}, Inheritance Retention Variance Hierarchical Clustering (IRV-HC)\cite{Spytkowski2012}, or modified hierarchic Gaussian Mixture Model (Hk++)\cite{Olech2016}. These methods address the human perception of hierarchy outlined above. The novelty of this research and the differences between these methods and classical clustering methods poses a question:
+The data structure approaching these requirements is a novelty called an \textit{Object Cluster Hierarchy} (\textit{OCH})~\cite{Spytkowski2012,Olech2016}. OCH extends Hierarchical Clustering (HC) paradigm~\textbf{cytaty do HAC etc.} and it is further described in section~\Cref{sec:intro_to_och}. Even though the above-mentioned properties might be challenging to address in the classical HC approaches the first point can be seen (at least partially) incorporated in a few methods such as Tree-Structured Stick Breaking for Hierarchical Data (TSSB-HC)~\cite{ghahramani2010tree}, Bayesian Rose Trees~\cite{2010_bayesian_rose_trees}, Inheritance Retention Variance Hierarchical Clustering (IRV-HC)~\cite{Spytkowski2012}, or modified hierarchic Gaussian Mixture Model (Hk++)~\cite{Olech2016}. The novelty of this research and the differences between these methods and classical clustering methods poses a question:
 
 \textit{Are existing clustering benchmarks capable of evaluating these unorthodox clustering methods?}
 
-In this paper, we address this question on the usage of synthetically generated data in the evaluation process.
+The next section~\Cref{sec:contrib} provides the paper contribution, followed by a litereture review in section~\Cref{sec:review}, and more in-depth introduction to the OCH in section~\Cref{sec:intro_to_och}. The~\Cref{model}  presents the model and the generation process. In~\Cref{parameter}, we describe the meaning of used parameters and provide insights on how to operate with them. Conducted experiments and their results are shown and discussed in~\Cref{experiments}. The correctness of analytical and intuitive properties of the generator and how the different parameters affect the outcome of generation were verified. The last section concludes the paper.
 
-\subsection{Benchmarking in the analysis of clustering methods}
+\section{Contribution}
+\label{sec:contrib}
+Our research aims to \textit{fill the gap in the presence of commonly accessible benchmark datasets}.
+    The main contribution of the paper is strictly scientific --- we have developed a \textit{new method generating hierarchical structures of data with assumed, user-defined properties}. The additional benefit for researchers is \textit{the establishment of a new set of benchmarks --- hierarchical structures of data with the ground truth assignment.} Our implemented method, together with the benchmarking datasets are freely available on-line at \texttt{http://kio.pwr.edu.pl/?page\_id=396} along with instructions on how to use it.
 
-Clustering methods can be tested on both real and generated data. The first type of data offers the advantage of presenting the reality. However, such data may not always be available in sufficient number, and/or in a form that facilitates testing. The second approach can be used in those cases. Artificially generated data possesses properties mimicking real data. This has the added benefit of allowing for finer control over the data used in testing, i.e., specific aspects of clustering can be tested separately.
+    During the development of our method, all aspects of the potential use of it and the use of the generated datasets have been taken into account. The proposed method can be used to test clustering methods that should ensure the generated data possesses the previously outlined requirements. Our published dataset can serve as a baseline benchmark for methods generating Object Cluster Hierarchies. Additionally, the researches can generate, using the generator, new structures of data according to their needs. Furthermore, such data and generator can help with proposing and testing new clustering quality measures.  
 
-Usually, the designer of a new method wants to know how good the proposed method is in comparison to the others. Generally, such a comparison is made by running different methods on a number of commonly used benchmark datasets and then comparing their results using a set of evaluation measures, e.g.,~\cite{Dreiseitl200128,Cooper1997107,Douglas2011544,Kampichler2010441,DBLP:journals/corr/abs-1301-7401,steinbach00comparison,Kakkar2014}. There are many publicly available repositories, i.e. UCI repository~\cite{Dua2017UCI}, KEEL-dataset repository~\cite{alcala2011keel}, and others~\cite{2015ClusteringDatasets, OpenML2013} which provide variety of different datasets that can be used as benchmarking baseline in methods' comparison. 
+In this paper, we present and evaluate the details of the generator model. We study the influence of the model parameters on the characteristic of generated datasets. The influence of model parameters on the shape and points distribution within the generated hierarchies are analytically evaluated. The conducted statistical analysis of the generated data presents features of the proposed method.
 
-As an example, in~\cite{Dash2003109} the authors used many different datasets among which four were from the UCI ML repository to verify clustering methods such as CHAMELEON, CURE, and BIRCH~\cite{Karypis_chameleon:a,citeulike:1304883}. Costa et al.~\cite{Costa:2013} used real and synthetic XML data to evaluate the effectiveness and scalability of their method. Authors of~\cite{Maulik:2002:PEC:628333.628859} evaluated the performance of three different clustering methods according to four indices. Experiments were made using artificial and real-life datasets with the different number of clusters.
+\section{Benchmarking in the analysis of clustering methods}
+\label{sec:review}
+Clustering methods can be tested on both real and generated data. The first type of data offers the advantage of representing the reality. However, such data may not always be available in sufficient number, or in a form that facilitates testing. The second approach can be used in those cases. Artificially generated data should possesses properties mimicking real data. Having a generator allowing for multiple generation of artificial data has the added benefit of allowing for finer control over the data used in testing, i.e., specific aspects of clustering can be tested separately.
 
-With respect to hierarchical clustering methods, Adams et al. in~\cite{ghahramani2010tree} used two testing datasets - the CIFAR-100~\cite{krizhevsky2009learning} image set and a sample of 1740 documents from the NIPS 1-12\footnote{\url{https://cs.nyu.edu/~roweis/data.html}} datasets. The results were verified using Perplexity, but the used datasets lack a hierarchical structure. Authors in~\cite{2010_bayesian_rose_trees} used several datasets to present their hierarchical method performance, one of them was a synthetically generated dataset in the form of binary vectors. The others were Spambase Dataset from UCI repository, a subset of the CMU newsgroup dataset cut down to only 4 categories. The authors also tested using the CEDAR Buffalo\footnote{\url{http://www.cedar.buffalo.edu/Databases/}} digits data set in two versions - a subset of the full dataset and a sample of only the 0, 2 and 4 digits. Every one of these datasets was used in testing in the same way they would be used for flat clustering, ignoring the unique capabilities of the method. Authors in~\cite{Spytkowski2012} have proposed an extension to the method mentioned above~\cite{ghahramani2010tree}. The comparison with base method was made using synthetic benchmarks generated from a stochastic model of known parameters. Two measures were used internal one (Average Mixture Model Likelihood) and external (Class Purity), but again the class inclusion hierarchy was not considered. In~\cite{Olech2016} a GMM-based hierarchical clustering method was presented. UCI repository datasets were used for its verification, including the iris, wine, glass identification and image segmentation datasets. A modified F-measure was used to verify the results, that is adapted to hierarchical data. However, the datasets used were not annotated with an inclusion of a hierarchical relation between the classes.
+Usually, the designer of a new method wants to know how good the proposed method is in comparison to the others. Generally, such a comparison is made by running different methods on a number of commonly used benchmark datasets and then comparing their results using a set of evaluation measures, e.g.,~\textbf{Dreiseitl200128 <- cos nowszego,Cooper1997107<- cos nowego,Douglas2011544,Kampichler2010441<- cos nwoego,DBLP:journals/corr/abs-1301-7401<- cos nowego,steinbach00comparison<- cos nowego,Kakkar2014}. There are many publicly available repositories, e.g., UCI repository~\cite{Dua2017UCI}, KEEL-dataset repository~\cite{alcala2011keel}, and others~\cite{2015ClusteringDatasets, OpenML2013} which provide variety of different datasets that can be used as benchmarking baseline in method comparison. 
 
-The publications mentioned above are the closest to the concept of Object Cluster Hierarchy (OCH) that we were able to find. However, by using data that is not annotated with a hierarchy of classes the verification does not allow the authors to present results concerning the hierarchical structure obtained in the end. In the case of Rose Trees~\cite{2010_bayesian_rose_trees}, in particular, the aspect was simply omitted due to the very conservative approach to testing the method's results. In the case of the TSSB method~\cite{ghahramani2010tree}, the hierarchy was thoroughly examined empirically and presented to the reader in a visual format. The authors of IRV-HC~\cite{Spytkowski2012} was focused on highlighting how the additional properties of the proposed method impact the final result regarding statistical characteristics, not external validation. In the case of Hk++~\cite{Olech2016}, the authors attempted to find a way of verifying the resulting hierarchies, but the used UCI data did not contain information about hierarchical relations between classes so that a method of synthetically generating data was used to support testing.
+In this paper the focus is on benchmarking of the methods that approach to bridge the gap between classical Hierarchical Clustering methods and how humen perceive hierarchies (as mentioned in the~\cref{sec:intro}. As an example, Adams et al. in~\cite{ghahramani2010tree} used two testing datasets - the CIFAR-100 image set~\cite{krizhevsky2009learning}  and a sample of 1740 documents from the NIPS 1-12\footnote{\url{https://cs.nyu.edu/~roweis/data.html}} datasets. The results were verified using Perplexity measure \textbf{dac publikacje o tym. Zastanowic sie, czy uzyc tego ze perplexity uyto, czy warto o tym wspominac?}, but the used datasets lack a hierarchical structure so that the ability to find that structure has not been tested. Authors in~\cite{2010_bayesian_rose_trees} used several datasets to present their hierarchical method performance, one of them was a synthetically generated dataset in the form of binary vectors. The other were Spambase Dataset from UCI repository, a subset of the CMU newsgroup dataset cut down to only 4 categories. The authors also tested using the CEDAR Buffalo\footnote{\url{http://www.cedar.buffalo.edu/Databases/}} digits data set in two versions, a subset of the full dataset and a sample of only the 0, 2 and 4 digits. Every one of these datasets were used in the same way as they would be used for flat clustering, ignoring the unique capabilities of the method. Authors in~\cite{Spytkowski2012} have proposed an extension to the method mentioned above~\cite{ghahramani2010tree}. The comparison with base method was made using synthetic benchmarks generated from a stochastic model of known parameters. Two measures were used: internal one (Average Mixture Model Likelihood) and external (Class Purity), but again the class inclusion hierarchy was not considered. In~\cite{Olech2016} a GMM-based Hierarchical Clustering method was presented. UCI repository datasets were used for its verification, including the Iris, Wine, Glass Identification and Image Segmentation datasets. A modified F-measure was used to verify the results, that is adapted to hierarchical data. However, the datasets used were not annotated with an inclusion of a hierarchical relation between the classes.
 
-Concluding, benchmarking is the primary approach to clustering method testing. Synthetic data generation allows to test characteristics of clustering method or clustering result selectively. All the researched literature suggests that methods capable of building structures similar to Object Cluster Hierarchies wasn't thoroughly tested on hierarchical data mainly due to the lack of hierarchical class ground truth assignment. Thus, there is a need for synthetic benchmarks (or benchmarking tool) allowing to fully grasp all the features of hierarchical structures.
+The publications mentioned above are the closest to the concept of Object Cluster Hierarchy (OCH) that we were able to find in the literature. However, by using data that is not annotated with a hierarchy of classes the verification does not allow the authors to present results concerning the hierarchical structure obtained in the end. In the case of Rose Trees~\cite{2010_bayesian_rose_trees}, in particular, the aspect was simply omitted due to the very conservative approach to testing the method's results. In the case of the TSSB method~\cite{ghahramani2010tree}, the hierarchy was thoroughly examined empirically and presented to the reader in a visual format. The authors of IRV-HC~\cite{Spytkowski2012} was focused on highlighting how the additional properties of the proposed method impact the final result regarding statistical characteristics, not external validation. In the case of Hk++~\cite{Olech2016}, the authors attempted to find a way of verifying the resulting hierarchies, but the used UCI data did not contain information about hierarchical relations between classes so that a method of synthetically generating data was used to support testing.
 
-\subsection{Brief introduction to Object Cluster Hierarchies}
-
-In this paper, we focus on a novel approach to hierarchical clustering, namely --- an \textit{Object Cluster Hierarchy} (\textit{OCH})~\cite{Spytkowski2012,Olech2016}. The hierarchical clustering paradigm \cite{Dash2003109,Costa:2013,Cimiano2004,DBLP:journals/corr/abs-1105-0121}, either agglomerative or divisive approach, produces a dendrogram showing all levels of agglomerations. Although there is a hierarchy relation between clusters, there is \textit{no hierarchy relationship between objects}. It is because all grouped objects are assigned only to the leaves and clusters are the result of cutting the tree at different levels. Any node in the tree, except for leaves, does not have objects assigned to it. Thus, the structure of generated clusters is flat. 
+\section{Brief introduction to Object Cluster Hierarchies}
+\label{sec:intro_to_och}
+In this paper, we focus on a novel approach to Hierarchical Clustering, namely --- an \textit{Object Cluster Hierarchy} (\textit{OCH})~\cite{Spytkowski2012,Olech2016}. The HC paradigm \textbf{Dash2003109,Costa:2013,Cimiano2004<-cos nowszego,DBLP:journals/corr/abs-1105-0121<-to tez mozna w sumie zmienic mimo ze review}, either agglomerative or divisive approach, produces a Dendrogram showing all levels of agglomerations. Although there is a hierarchy relation between clusters, there is \textit{no hierarchy relationship between objects}. It is because all grouped objects are assigned only to the leaves and clusters are the result of cutting the tree at different levels. Any node in the tree, except for leaves, does not have objects assigned to it. Thus, the structure of generated clusters is flat. 
 
 \input{och-example}
     
-Our OCH approach extends hierarchical cluster analysis and allows assigning objects to each node in the produced hierarchy tree~\cite{ghahramani2010tree,Spytkowski2012,Olech2016,2010_bayesian_rose_trees}. Previously, researchers have developed methods which allow objects to be assigned to any node of the hierarchy tree, what is enough to receive a new hierarchy relation that exists between objects.
+The OCH approach extends HC by allowing objects to be assigned to any node of the hierarchy tree. Researchers have developed methods with such capability, which is enough to receive a new hierarchy relation that exists between objects, e.g.,~\cite{ghahramani2010tree,2010_bayesian_rose_trees,Spytkowski2012,Olech2016}.
 
-    Within this paradigm we have formulated three important requirements~\cite{Spytkowski2012} to accurately reflect a semantic (ontological) approach to hierarchical clustering:
+    Within this paradigm we have formulated three important requirements~\cite{Spytkowski2012} to accurately reflect a semantic (ontological) approach to Hierarchical Clustering:
 \begin{enumerate}
     \item {\textit{Inheritance} -- every object belonging to a given group also belongs to the parents groups, up to the root;}
     \item {\textit{Retention} -- objects are not required to be located in the tree’s leaves;}
     \item {\textit{Variance} -- groups located lower in the hierarchy are more specific, i.e., every child group has to have not higher variation than its parents.}
 \end{enumerate}
 
-These formal requirements serve to closer reflect the human perception of hierarchy that can be also found in images~\cite{ILSVRC15,ghahramani2010tree}, documents~\cite{ghahramani2010tree,2010_bayesian_rose_trees}, and communities structure~\cite{lancichinetti2009detecting, massaro2014hierarchical}.
+These formal requirements serve to closer reflect the human perception of hierarchy that can be also found in images~\cite{ILSVRC15,ghahramani2010tree}, documents~\cite{ghahramani2010tree,2010_bayesian_rose_trees}, and communities structure~\textbf{lancichinetti2009detecting<- cos nowszego, massaro2014hierarchical}.
 
-In the~\Cref{fig:och-example} a comparison between Hierarchical Clustering (a) and Object Cluster Hierarchy (b) is presented. In the former, the final clustering is flat, and the number of clusters depends on the hight where the dendrogram is cut. Considering~\Cref{fig:hierarchical-example}, by cutting it at the bottom of the hierarchy, a set of 7 clusters is formed, each of them containing 1 letter. Regardless of where the hierarchy is cut, the resulting clustering consists of all the same 7 letters. In comparison, in {fig:och-example}, the whole OCH represents the clustering - partition of all 7 letters. There is no need to cut a hierarchy. Due to hierarchical relations, objects from child clusters conceptually belongs to the parent clusters. Root always contains all the objects, whereas leaves contain only what belongs to them.
+In \Cref{fig:och-example} a comparison between Hierarchical Clustering (a) and Object Cluster Hierarchy (b) is presented. In the former, the final clustering is flat, and the number of clusters depends on the hight where the Dendrogram is cut. Considering~\Cref{fig:hierarchical-example}, by cutting the tree at the bottom of the hierarchy, a set of seven clusters is formed, each of them containing one letter. Regardless of where the hierarchy is cut, the resulting clustering consists of all the same seven letters. In comparison, in \Cref{fig:och-example}, the whole OCH represents the clustering - partition of all 7 letters. There is no need to cut a hierarchy. Due to hierarchical relations, objects from child clusters conceptually belongs to the parent clusters. Root always contains all the objects (i.e., the whole set), whereas leaves contain only what belongs to them.
 
-Object Cluster Hierarchy is a novel concept that is recently gaining more interest. One of the first works on the subject of Object Clusters Hierarchy was published in~\cite{ghahramani2010tree} where the authors pointed out that many data arise from a latent hierarchy, for example, a set of text documents or images. Such data can be modelled by an Object Cluster Hierarchy, which is one possible way to discover the unobservable structure by inferring it during a learning process. Authors in~\cite{ghahramani2010tree} proposed a nonparametric method allowing to develop trees of unbounded width and depth. The objects can be assigned to any node in a created tree. Thus, some nodes can be empty, i.e., without any objects assigned. However, this method does not satisfy the \textit{Variance} requirement. Objects belonging to the child node can vary more than objects assigned to its parent node. Starting from this method as the prototype, the ongoing development has been carried out to propose a new version of it. This method is about to be published soon.
+A hierarchy with data points placed in leaves only is a valid OCH thus all the HC results are always a OCH, but the opposite does not always hold true due to the \textit{Retantion} requirement. Hierarchical Clustering result always contain all the data points at the bottom of the hierarchy. Thus, OCH is an abstraction over Hierarchical Clustering.
 
-    During the development of the method mentioned above, the authors met troubles with comparing the new method with others, especially with the inspiration~\cite{ghahramani2010tree} and Bayesian Rose Trees~\cite{DBLP:journals/corr/abs-1203-3468}. The problem, to the best of our knowledge, is twofold: firstly, there are no appropriate evaluation measures dedicated to object cluster hierarchies which would reflect the desired properties listed above. Secondly --- there are no available benchmark datasets with known properties, which could be used for testing different methods of hierarchical structure generation.
+Object Cluster Hierarchy is a novel concept that is recently gaining more interest. One of the first works on the subject of Object Clusters Hierarchy was published in~\cite{ghahramani2010tree} where the authors pointed out that many data arise from a latent hierarchy, for example, a set of text documents or images. Such data can be modelled by an Object Cluster Hierarchy, which is one possible way to discover the unobservable structure by inferring it during a learning process. Authors in~\cite{ghahramani2010tree} proposed a nonparametric method allowing to develop trees of unbounded width and depth. The objects can be assigned to any node in a created tree. Thus, some nodes can be empty, i.e., without any objects assigned. This method does not satisfy the \textit{Variance} requirement. Objects belonging to the child node can vary more than objects assigned to its parent node. Starting from this method as the prototype, the ongoing development has been carried out to propose a new version of it. The first prototype of it was presented in~\cite{Spytkowski2016}.
+
+    During the development of the method mentioned above, the authors met troubles with comparing the new method with others, especially with the inspiration~\cite{ghahramani2010tree} and Bayesian Rose Trees~\cite{DBLP:journals/corr/abs-1203-3468}. The problem, to the best of our knowledge, is twofold: firstly, there are no appropriate evaluation measures dedicated to object cluster hierarchies which would reflect the desired properties listed above. Secondly, there are no available benchmark datasets with known properties, which could be used for testing different methods of hierarchical structure generation.
     
-We started with a partial solution to the first problem that is presented in~\cite{Spytkowski2016}. However, new external and internal validation techniques have been developed and are planned to be published soon as their experimental study requires appropriate datasets. That requirement led to a development of a method generating the data structures with known characteristics that is addressed in this article. Being able to model the characteristics of created artificial datasets allow more in-depth analysis of both methods and evaluation measures.
-
-\subsection{Contribution and problem description}
-
-Our research aims to \textit{fill the gap in the presence of commonly accessible benchmark datasets}.
-    The main contribution of the paper is strictly scientific --- we have developed a \textit{new method generating hierarchical structures of data with assumed (precisely user-defined) properties}. The additional benefit for researchers is \textit{the establishment of a new set of benchmarks -- hierarchical structures of data with the true class assignment.} Our method, together with the benchmarking datasets is freely available on-line at \texttt{http://kio.pwr.edu.pl/?page\_id=396} along with instructions on how to use it.
-
-    During the development of our method, all aspects of the potential use of it and the use of the generated datasets have been taken into account. The proposed tool can be used to test methods of clustering that should ensure the generated data possesses the previously outlined requirements. Our published dataset can serve as a baseline benchmark for OCH method, however, the researches can also generate new structures of data according to their needs. Furthermore, such data and generator can help with proposing and testing new quality measures.  
-
-In this paper, we present and evaluate the details of the generator's model. We study the influence of the model's parameters on the characteristic of generated datasets. The influence of model's parameters on the shape and points distribution within the generated hierarchies is analytically evaluated. The conducted statistical analysis of the generated data present features of the proposed method. The tools together with generated datasets are free, and they are accessible from \texttt{http://kio.pwr.edu.pl/?page\_id=396}.
-    
-    The paper is organised as follows. The next section presents the model and the generation process. In~\Cref{parameter}, we describe the meaning of used parameters and provide insights on how to operate with them. Conducted experiments and their results are shown and discussed in~\Cref{experiments}. The correctness of analytical and intuitive properties of the generator and how the different parameters affect the outcome of generation were verified. The last section concludes the paper.
+We started with a partial solution to the first problem that is presented in~\cite{Spytkowski2016}. However, new external and internal validation techniques have been developed and are planned to be published soon as their experimental study requires appropriate datasets. That requirement led to a development of a method generating the data structures with known characteristics that is addressed in this article. Being able to model the characteristics of created artificial datasets allows more in-depth analysis of both methods and evaluation measures.
 %
 \section{Generator model}
 \label{model}
-	The data generated by this tool can be seen as data coming from an infinite mixture model. Most commonly an infinite mixture model is composed of infinite, indexed distributions from which the data is drawn. In such case the mixture weights can be drawn from a Dirichlet distribution, using the Stick Breaking Process. Generally, the distributions for the mixture components are unrelated to each other. This generator uses a similar approach, however, it bases its mixture weights on the Tree-Structured Stick Breaking Process, as described in~\cite{ghahramani2010tree}, which arranges the mixture components into a hierarchical structure. This structure also defines the relationship between the mixture components, that is -- children distributions are based on their parent's parameters.
+	The data generated by this model	 can be seen as data coming from an infinite mixture model. Most commonly an infinite mixture model is composed of infinite, indexed distributions from which the data is drawn. In such case the mixture weights can be drawn from a Dirichlet distribution, using the Stick Breaking Process. Generally, the distributions for the mixture components are unrelated to each other. This generator uses a similar approach, however, it bases its mixture weights on the Tree-Structured Stick Breaking Process, as described in~\cite{ghahramani2010tree}, which arranges the mixture components into a hierarchical structure. This structure also defines the relationship between the mixture components, that is -- children distributions are based on their parent's parameters.
     
     Hierarchies generated using the Stick Breaking Process posses the following characteristics~\cite{ghahramani2010tree, Spytkowski2012}:
 \begin{enumerate}
